# guess-film-bot

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: config.py
database/: dao.py  database.py  models.py
fsm/: states.py
game/: game.py
handlers/: in_game.py  not_in_game.py  other.py
keyboards/: reply_keyboards.py  set_menu.py
lexicon/: lexicon_ru.py
redisdata/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
requirements/: base.txt
res/: films.json
src/: bot.py  config.py  dao.py  database.py  game.py  models.py
